# rust-cli-template

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/cli/: cli_args.rs  cli_commands.rs  mod.rs
template/: Cargo.toml  LICENSE  README.md  cargo-generate.toml
template/src/: main.rs
template/src/cli/: cli_commands.rs
